--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,253 @@
-.App {
-  text-align: center;
+@import url("https://fonts.googleapis.com/css?family=Poppins:300,400,600,800&display=swap");
+html,
+body {
+  padding: 0;
+  margin: 0;
+  font-family: Poppins, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.container {
+  width: 1280px;
+  min-width: 1280px;
+  margin: 0 auto;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.container .wrapper {
+  padding: 0 48px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container .wrapper .home {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 100%;
+  width: 100%;
 }
 
-.App-link {
-  color: #61dafb;
+.container .wrapper .home p {
+  font-size: 0.75rem;
+  letter-spacing: 0.3rem;
+  text-transform: uppercase;
+  font-weight: 500;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.container .wrapper .home h5 {
+  margin-top: 260px;
+  font-size: 24px;
+  font-weight: 600;
+  padding-right: 360px;
+}
+
+header {
+  height: 100px;
+}
+
+header .inner-header {
+  position: relative;
+  z-index: 10;
+  height: 100px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+header .inner-header .logo a {
+  font-weight: 700;
+  font-size: 1rem;
+  text-decoration: none;
+  color: #e20001;
+}
+
+header .inner-header .menu button {
+  border: none;
+  background: none;
+  outline: none;
+  cursor: pointer;
+  font-size: 0.8rem;
+  mix-blend-mode: difference;
+}
+
+header .hamburger-menu {
+  display: none;
+  z-index: 9;
+  top: 0;
+  left: 0;
+  right: 0;
+  position: fixed;
+  height: 100%;
+  width: 100%;
+}
+
+header .hamburger-menu .menu-secondary-background-color {
+  background: #e20001;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  z-index: -1;
+}
+
+header .hamburger-menu .menu-layer {
+  position: relative;
+  background: black;
+  height: 100%;
+  overflow: hidden;
+}
+
+header .hamburger-menu .menu-layer .menu-city-background {
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  background-size: cover;
+  background-repeat: no-repeat;
+  -webkit-animation: cameraPan 30s infinite;
+          animation: cameraPan 30s infinite;
+}
+
+header .hamburger-menu .menu-layer .wrapper {
+  position: relative;
+}
+
+header .hamburger-menu .menu-layer .wrapper .menu-links {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: relative;
+  top: 200px;
+}
+
+header .hamburger-menu .menu-layer .wrapper .menu-links nav {
+  display: block;
+}
+
+header .hamburger-menu .menu-layer .wrapper .menu-links nav ul {
+  margin: 0;
+  padding: 0;
+}
+
+header .hamburger-menu .menu-layer .wrapper .menu-links nav ul li {
+  list-style: none;
+  font-size: 6rem;
+  font-weight: 700;
+  cursor: pointer;
+  height: 135px;
+  overflow: hidden;
+  position: relative;
+  width: 700px;
+}
+
+header .hamburger-menu .menu-layer .wrapper .menu-links nav ul li a {
+  position: absolute;
+  color: #fff;
+  text-decoration: none;
+}
+
+header .hamburger-menu .menu-layer .wrapper .menu-links nav ul li a:hover {
+  color: #e20001;
+}
+
+header .hamburger-menu .menu-layer .wrapper .menu-links .info {
+  color: #fff;
+  width: 300px;
+}
+
+header .hamburger-menu .menu-layer .wrapper .menu-links .info h3 {
+  font-size: 1.2rem;
+  margin: 8px auto;
+}
+
+header .hamburger-menu .menu-layer .wrapper .menu-links .info p {
+  margin: 0 auto;
+  font-size: 0.8rem;
+}
+
+header .hamburger-menu .menu-layer .wrapper .locations {
+  position: absolute;
+  bottom: -80px;
+  color: #fff;
+  margin-top: 16px;
+  font-size: 0.8rem;
+  font-weight: 600;
+}
+
+header .hamburger-menu .menu-layer .wrapper .locations span {
+  cursor: pointer;
+  font-weight: 400;
+  margin: 0 32px;
+  -webkit-transition: 0.3s ease-in-out;
+  transition: 0.3s ease-in-out;
+}
+
+header .hamburger-menu .menu-layer .wrapper .locations span:first-child {
+  margin-left: 64px;
+}
+
+header .hamburger-menu .menu-layer .wrapper .locations span:hover {
+  color: #fff;
+  background: #e20001;
+  padding: 8px 24px;
+  border-radius: 4px;
+}
+
+@-webkit-keyframes cameraPan {
+  0% {
+    background-position: 0% 0%;
   }
-  to {
-    transform: rotate(360deg);
+  25% {
+    background-position: 40% 10%;
+  }
+  50% {
+    background-position: 0% 10%;
+  }
+  75% {
+    background-position: 10% 40%;
+  }
+  100% {
+    background-position: 0% 0%;
   }
 }
+
+@keyframes cameraPan {
+  0% {
+    background-position: 0% 0%;
+  }
+  25% {
+    background-position: 40% 10%;
+  }
+  50% {
+    background-position: 0% 10%;
+  }
+  75% {
+    background-position: 10% 40%;
+  }
+  100% {
+    background-position: 0% 0%;
+  }
+}
+/*# sourceMappingURL=App.css.map */
